# djayv2

./: .env.example  .gitignore  Dockerfile  FERC_SCRAPER_DOWNLOAD.html  GET_FERC_SCRAPER.sh  RAG.ipynb  README.md  dockerfile.txt  download_ferc_scraper.html  download_ferc_scraper.py  download_ferc_scraper.sh  download_script.py  github_gist_instructions.md  logging_setup.py  main.py  main_driver.py  requirements.txt  run-jobs.sh  run_jobs
ferc_scraper_complete/: Dockerfile  PRODUCTION_README.md  README.md  SCRAPER_TEST_REPORT.md  ZIP_README.md  deploy.sh  deploy_external_db.sh  docker-compose.yml  init.sql  main.py  main_driver  pyproject.toml  requirements.txt  run-jobs.sh  run_jobs.json  test_production_scraper.py  test_scraper.py  test_selenium_scraper.py
ferc_scraper_complete/src/ferc_scraper/: downloader.py  parser.py  scd.py  scraper.py  selenium_client.py  storage.py
ferc_scraper_complete/tests/: test_database_integration.py  test_parser.py  test_scd.py
scrapers/: scraper_name.py
src/ferc_scraper/: __init__.py  config.py  http.py  ingest.py  parser.py  scraper.py  storage.py
tests/: test_http.py  test_parser.py  test_storage_sql.py
