[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ferc-scraper"
version = "0.1.0"
description = "FERC website scraper"
requires-python = ">=3.10"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = [
    "tests",
]
pythonpath = [
    "src",
]